--- a/twentytwopips/package.json
+++ b/twentytwopips/package.json
@@ -38,7 +38,8 @@
     "globals": "^16.0.0",
     "tailwindcss": "^4.1.14",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "vite": "^6.3.6"
   }
 }
