--- a/twentytwopips/package.json
+++ b/twentytwopips/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
